# remaining-issues-alert-bot

./: .gitignore  Cargo.toml  commands_dict.csv
src/: backend.rs  cabocha.rs  core.rs  jparse.rs  main.rs  persistent.rs  readline.rs  sched.rs  schema.rs  slack.rs
src/core/: exec.rs  jparse.rs  persistent.rs  remote.rs
